--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,44 +1,46 @@
-<footer class="footer page">
-  <div class="footer-container">
-    <div class="logo">
-      <img src="../../../assets/images/sticker_round.png" width="150px" height="150px">
-    </div>
-    <div *ngIf="isMobile" class="mobile-footer-text">&copy; New Crown Service Partners NV/SA</div>
-    <div *ngIf="!isMobile">
-      <h2>Follow us</h2>
-      <div class="icons">
-        <fa-icon [icon]="faLinkedin"></fa-icon>
+<footer class="footer">
+  <div class="page">
+    <div class="footer-container">
+      <div class="logo">
+        <img src="../../../assets/images/sticker_round.png" width="150px" height="150px">
       </div>
-    </div>
-    <div *ngIf="!isMobile">
-      <h2>Pages</h2>
-      <ul>
-        <li><a routerLink="/home">Home</a></li>
-        <li><a routerLink="/services">Service</a></li>
-        <li><a routerLink="/products">Products</a></li>
-        <li><a routerLink="/stories">Stories</a></li>
-        <li><a routerLink="/contact">Contact</a></li>
-      </ul>
-    </div>
-    <div *ngIf="!isMobile">
-      <h2>Contact</h2>
-      <table>
-        <tr>
-          <td>New Crown Service Partners NV/SA</td>
-        </tr>
-        <tr>
-          <td>Gansbroekstraat 27, B-2870 Puurs</td>
-        </tr>
-        <tr>
-          <td>+32 3 434 92 69</td>
-        </tr>
-        <tr>
-          <td>info@newcrownservice.com</td>
-        </tr>
-        <tr>
-          <td>VAT BE 0682 902 665</td>
-        </tr>
-      </table>
+      <div *ngIf="isMobile" class="mobile-footer-text">&copy; New Crown Service Partners NV/SA</div>
+      <div *ngIf="!isMobile">
+        <h2>Follow us</h2>
+        <div class="icons">
+          <fa-icon [icon]="faLinkedin"></fa-icon>
+        </div>
+      </div>
+      <div *ngIf="!isMobile">
+        <h2>Pages</h2>
+        <ul>
+          <li><a routerLink="/home">Home</a></li>
+          <li><a routerLink="/services">Service</a></li>
+          <li><a routerLink="/products">Products</a></li>
+          <li><a routerLink="/stories">Stories</a></li>
+          <li><a routerLink="/contact">Contact</a></li>
+        </ul>
+      </div>
+      <div *ngIf="!isMobile">
+        <h2>Contact</h2>
+        <table>
+          <tr>
+            <td>New Crown Service Partners NV/SA</td>
+          </tr>
+          <tr>
+            <td>Gansbroekstraat 27, B-2870 Puurs</td>
+          </tr>
+          <tr>
+            <td>+32 3 434 92 69</td>
+          </tr>
+          <tr>
+            <td>info@newcrownservice.com</td>
+          </tr>
+          <tr>
+            <td>VAT BE 0682 902 665</td>
+          </tr>
+        </table>
+      </div>
     </div>
   </div>
   <div class="copyright" *ngIf="!isMobile">
