--- a/src/app/pages/contact/contact.page.scss
+++ b/src/app/pages/contact/contact.page.scss
@@ -141,6 +141,7 @@ section#contact {
                     th {
                         font-size: 15px;
                         text-transform: uppercase;
+                        text-align: left;
                     }
                 }
 
