--- a/src/app/pages/products/product.page.html
+++ b/src/app/pages/products/product.page.html
@@ -53,6 +53,7 @@
   <app-slide-side-navigation
     [isOpen]="filtersOpen"
     (onOpenStateChange)="filtersOpen = $event"
+    style="-ms-overflow-style: -ms-autohiding-scrollbar;"
   >
     <div class="slide-nav-content">
       <h1>Suitable for</h1>
