--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -2,10 +2,8 @@
 
 .footer {
   font-size: 12px;
-  display: flex;
   background-color: $footer-color;
   flex-direction: column !important;
-  align-items: center;
 
   @media screen and (max-width: 768px) {
     .logo {
@@ -16,7 +14,6 @@
 
   .copyright {
     background-color: #c7c8cb;
-    width: 100vw;
     text-align: center;
     font-size: 16px;
     padding: 10px;
@@ -137,5 +134,10 @@
       justify-content: center;
       font-size: 15px;
     }
+  }
+
+  ul {
+    padding: 0;
+    margin: 0;
   }
 }
