--- a/src/app/components/products/product-card/product-card.component.scss
+++ b/src/app/components/products/product-card/product-card.component.scss
@@ -4,14 +4,13 @@
     border-radius: 5px;
     max-width: 300px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-    display: flex;
+    display: block;
     flex-direction: column;
     transition: all .2s ease-in-out;
     position: relative;
     overflow: hidden;
     flex: 1 1 33.33%;
     margin: 0 5px 30px 5px;
-    display: flex;
 
     &:hover {
         transform: scale(1.025);
