--- a/src/app/components/products/product-list/product-list.page.scss
+++ b/src/app/components/products/product-list/product-list.page.scss
@@ -78,7 +78,7 @@
             @media screen and (min-width: 768px) {
                 display: flex;
                 flex-direction: row;
-                justify-content: space-evenly;
+                justify-content: space-around;
                 flex-wrap: wrap;
             }
         }
