--- a/src/app/pages/landing/landing.page.scss
+++ b/src/app/pages/landing/landing.page.scss
@@ -21,7 +21,7 @@ section#landing-page {
     .index-banner {
         color: white;
         height: auto;
-        min-height: 100vh;
+        height: 100vh;
         background-size: cover;
         background: url("../../../assets/images/home/background.jpg") no-repeat center center;
         -webkit-background-size: cover;
