--- a/src/app/pages/stories/stories.component.html
+++ b/src/app/pages/stories/stories.component.html
@@ -1,7 +1,7 @@
 <section class="stories-page">
   <div class="banner">
     <div class="content">
-      <h1>Stories: Comming soon...</h1>
+      <h1>Stories: Coming soon...</h1>
     </div>
   </div>
 
