--- a/src/styles.scss
+++ b/src/styles.scss
@@ -113,13 +113,21 @@ h3 {
     }
 
     &.image-banner {
-        justify-content: center;
-        display: flex;
-
+        height: 25vh;
+        overflow: hidden;
+        position: relative;
         img {
+            // width: 100vw;
+            // height: auto;
+            // display: block;
+            max-width: 100%;
             width: 100%;
-            height: 25vh;
-            display: block;
+            position: absolute;
+            top: 0;
+            left:0;
+            right:0;
+            background-repeat: no-repeat;
+            background-position: 50% 50%;
         }
     }
 }
@@ -184,7 +192,7 @@ h3 {
 
         &.image-banner {
             img {
-                max-width: 800px;
+                // max-width: 800px;
             }
         }
     }
