--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -16,15 +16,16 @@
 
   <div #ourVision class="article">
     <div class="content image-text">
-      <img src="../../../assets/images/home/home_pic_2.jpg" />
+      <img src="../../../assets/images/home/home_pic_2.jpg" id="home_pic_2" />
       <div class="image-text">
         <h2>Restore beyond design performance</h2>
         <p>
           NEW CROWN offers solutions to modernize and upgrade existing
           Returnable Glass Bottling equipment, not only to restore the nominal
           capacity, but also to meet all current standards in terms of
-          sustainability, quality and safety. We specialize in bottle washers
-          and fillers, but you can also call upon us for
+          sustainability, quality and safety. We specialize in
+          <strong> bottle washers</strong>
+          and <strong>fillers </strong>, but you can also call upon us for
         </p>
         <ul>
           <li>Craters and decraters</li>
@@ -34,8 +35,8 @@
 
         <h2>One stop shop</h2>
         <p>
-          We have all needed engineering disciplines under our roof to offer
-          turn key solutions
+          We have all engineering disciplines under our roof to offer turn key
+          solutions
         </p>
         <ul>
           <li>Mechanical engineering</li>
