--- a/src/app/pages/products/product.page.html
+++ b/src/app/pages/products/product.page.html
@@ -14,14 +14,26 @@
       <div class="content">
         <img src="../../../assets/images/product/prod_pic_2.jpg" />
         <div class="paragraph">
-          <h2>Parts</h2>
+          <h2>UPGRADES, CONVERSIONS AND SPARE PARTS …</h2>
           <p>
-            The NCSP team is a great mix of seasoned experience and young
-            enthusiasm, of proven solutions and new technologies. We offer
-            global services, in Belgium, in Europe and outside, with a special
-            knack for Africa, where we have a longtime experience, and where we
-            know we can make a difference.
+            NCSP helps you maintaining and improving the efficiency and
+            effectivity of your bottling line. We offer upgrades, conversions
+            and spare parts for wide range of brands and ages of machines for
+            glass bottling lines.
           </p>
+
+          Our specialty:
+          <ul>
+            <li>Bottle washers</li>
+            <li>Fillers</li>
+          </ul>
+          But we also offer solutions for the other machines on the line :
+          <ul>
+            <li>Conveyors</li>
+            <li>Craters/decraters</li>
+            <li>Palletizer/depalletizer</li>
+            <li>...</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -30,13 +42,13 @@
       <div class="content">
         <img src="../../../assets/images/product/prod_pic_3.jpg" />
         <div class="paragraph">
-          <h2>Upgrades, add-ons and conversions</h2>
+          <h2>FOR ALL MAKES, ALL BRANDS, ALL AGES</h2>
           <p>
-            The NCSP team is a great mix of seasoned experience and young
-            enthusiasm, of proven solutions and new technologies. We offer
-            global services, in Belgium, in Europe and outside, with a special
-            knack for Africa, where we have a longtime experience, and where we
-            know we can make a difference.
+            Why replace your machine if your old machine can be brought to meet
+            current standards in terms of efficiency and consumptions? To
+            original design performance and even beyond. We work on a wide array
+            of old and current brands, such as CROWN-BAELE, GANGLOFF, SIMONAZZI,
+            HOLSTEIN & KAPPERT, ORTMANN & HERBST, ...
           </p>
         </div>
       </div>
