--- a/src/app/components/scroll-button/scroll-button.component.scss
+++ b/src/app/components/scroll-button/scroll-button.component.scss
@@ -10,11 +10,14 @@
   height: 40px;
   border-radius: 10px;
   cursor: pointer;
+  z-index: 1001;
 
 
   .icon{
     color: #FFFFFF;
     font-size: 40px;
+    z-index: 1001;
+
   }
 
 
