--- a/src/app/pages/landing/landing.page.scss
+++ b/src/app/pages/landing/landing.page.scss
@@ -18,6 +18,11 @@ section#landing-page {
         visibility: hidden;
     }
 
+    ul{
+        li{
+            text-align: left;
+        }
+    }
     .index-banner {
         color: white;
         height: auto;
