--- a/src/app/pages/products/product.page.html
+++ b/src/app/pages/products/product.page.html
@@ -12,7 +12,7 @@
   <div class="product-types">
     <div class="article">
       <div class="content">
-        <img src="../../../assets/images/product/prod_pic_2.jpg" />
+        <img src="../../../assets/images/product/prod_pic_2.jpg" class="full-image" />
         <div class="paragraph">
           <h2>UPGRADES, CONVERSIONS AND SPARE PARTS …</h2>
           <p>
