--- a/src/app/pages/services/services.component.html
+++ b/src/app/pages/services/services.component.html
@@ -10,13 +10,13 @@
       <div class="image-text">
         <h2>Service</h2>
         <p>
-          When it comes to service, NEW CROWN your ideal partner. We put our
-          years of experience and expertise in RGB at the service of our
-          customers. You can rely on us for
+          When it comes to service, NEW CROWN is your ideal partner. We bring
+          our years of experience and expertise in RGB to the service of our
+          customers. You can rely on us for:
         </p>
         <ul>
-          <li>Trouble shooting en root cause analysis</li>
-          <li>Fact finding / efficiëntie analyses</li>
+          <li>Trouble shooting and root cause analysis</li>
+          <li>Fact finding / efficiency analyses</li>
           <li>Machine audits</li>
           <li>Repairs</li>
           <li>Maintenance and revisions</li>
@@ -24,10 +24,13 @@
           <li>Upgrades</li>
           <li>Training and hands-on training</li>
         </ul>
-
         <p>
           Our service technicians will be on-site anywhere in the world, helping
-          you to get and keep your machines at level.
+          you to get and keep your machines at level. Important to note our
+          technicians all speak English/Dutch/French. Line Audits, GOLD, SILVER,
+          BRONZE and below, we carry out line audits and advice on äny brand
+          lines old or new. Sometimes a neutral audit brings a fresh
+          perspective.
         </p>
       </div>
     </div>
@@ -41,11 +44,11 @@
           In order to keep a machine in good working order, it is not sufficient
           to make a revision once or twice a year. Maintenance is a daily duty.
           During our interventions we always take the time to give your people a
-          thorough explanation about the maintenance of the machine involved and
-          explain to them what needs to be done and at what times. By always
-          doing this with your people hands-on, we do not only teach them what
-          to do, but they also understand why, and what the consequences of the
-          lack of maintenance can be.
+          thorough explanation about the maintenance required and explain to
+          them what needs to be done and when. By always doing this with your
+          people hands-on, we do not only teach them what to do, but they also
+          understand why, and what the consequences of the lack of maintenance
+          can be.
         </p>
       </div>
     </div>
@@ -56,15 +59,14 @@
       <div class="image-text">
         <h2>SERVICE LEVEL AGREEMENTS</h2>
         <p>
-          We are happy to be your service partner, and we are not afraid to
-          fully commit ourselves to this. By concluding a lettuce with NEW
-          CROWN, you are not only sure of our undivided attention and good
-          worries, we also go that step further, and connect our destiny to
-          yours. After a period of exploration, we put together objectives that
+          We are happy to be your committed service partner. Joining up with NEW
+          CROWN, you are not only sure of our professional services, but we know
+          the industry and have the flexibility when dates change or production
+          delays. After a period of exploration, we put together objectives that
           we constantly monitor using carefully chosen KPIs. Service and
           material costs are then included in the agreement. So you can
-          perfectly project your costs in short long term, for the machines you
-          entrust to us.
+          perfectly project your costs in short and long term, for the machines
+          you entrust to us.
         </p>
       </div>
     </div>
