--- a/src/app/pages/stories/stories.component.scss
+++ b/src/app/pages/stories/stories.component.scss
@@ -1,4 +1,8 @@
 @import "../../../assets/variables";
-section.stories-page{
+
+section.stories-page {
+    .banner {
+        background: url('../../../assets/images/stories/stories.jpg') center center;
+    }
 
 }
