updated content homepage

--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -9,10 +9,7 @@
     </div>
   </div>
 
-  <scroll-button
-    [scrollDown]="scrollDown"
-    (onScroll)="scroll()"
-  ></scroll-button>
+  <scroll-button [scrollDown]="scrollDown" (onScroll)="scroll()"></scroll-button>
 
   <div #ourVision class="article">
     <div class="content image-text">
@@ -21,11 +18,11 @@
         <h2>Restore beyond design performance</h2>
         <p>
           NEW CROWN offers solutions to modernize and upgrade existing
-          Returnable Glass Bottling equipment, not only to restore the nominal
-          capacity, but also to meet all current standards in terms of
-          sustainability, quality and safety. We specialize in
-          <strong> bottle washers</strong>
-          and <strong>fillers </strong>, but you can also call upon us for
+          NEW CROWN offers solutions to modernize and upgrade existing Returnable Glass Bottling equipment, not only to
+          restore the nominal capacity, but also to meet all current standards in terms of sustainability, quality and
+          safety. We specialize in
+          <strong>BOTTLE WASHERS</strong>
+          and <strong> FILLERS </strong>, but you can also call upon us for
         </p>
         <ul>
           <li>Craters and decraters</li>
@@ -35,8 +32,7 @@
 
         <h2>One stop shop</h2>
         <p>
-          We have all engineering disciplines under our roof to offer turn key
-          solutions
+          We have all engineering specialties under our roof to offer turnkey solutions
         </p>
         <ul>
           <li>Mechanical engineering</li>
@@ -44,8 +40,8 @@
           <li>PLC Software programming</li>
           <li>Service Engineering</li>
           <li>
-            For every project we appoint one of our project engineers, who will
-            be in the lead and act as you sole point of contact.
+            For every project we appoint one of our project engineers, who will be in the lead and act as you sole point
+            of contact.
           </li>
         </ul>
       </div>
@@ -57,42 +53,30 @@
       <div class="image-text">
         <h2>The origins of the crown</h2>
         <p>
-          NEW CROWN Service Partners NV was founded in October 2017 by two
-          former employees and acquired the intellectual property and trade fund
-          of CROWN-BAELE, who was declared bankrupt a month before. This makes
-          NEW CROWN the sole official OEM of CROWN-BAELE parts and assemblies.
+          NEW CROWN Service Partners NV was founded in October 2017 by two former employees and acquired the
+          intellectual property and trade fund of CROWN-BAELE. This makes NEW CROWN the sole official original
+          manufacturer of CROWN-BAELE parts and assemblies.
         </p>
         <p>
-          The name NEW CROWN was chosen to mark the inseparable connection with
-          the history of its illustrious predecessor yet indicating a new
-          business model and ambition in becoming the reference for upgrading
-          older equipment in the global RGB industry.
+          The name NEW CROWN was chosen to mark the inseparable connection with the history of its illustrious
+          predecessor yet indicating a new business model and ambition in becoming the reference for upgrading older
+          equipment in the global RGB industry.
         </p>
         <div class="logo-history">
           <div class="origin-photo">
-            <img
-              src="../../../assets/images/home/logo-historiek/historiek_logo_1.png"
-            />
+            <img src="../../../assets/images/home/logo-historiek/historiek_logo_1.png" />
           </div>
           <div class="origin-photo">
-            <img
-              src="../../../assets/images/home/logo-historiek/historiek_logo_2.png"
-            />
+            <img src="../../../assets/images/home/logo-historiek/historiek_logo_2.png" />
           </div>
           <div class="origin-photo">
-            <img
-              src="../../../assets/images/home/logo-historiek/historiek_logo_3.png"
-            />
+            <img src="../../../assets/images/home/logo-historiek/historiek_logo_3.png" />
           </div>
           <div class="origin-photo">
-            <img
-              src="../../../assets/images/home/logo-historiek/historiek_logo_4.png"
-            />
+            <img src="../../../assets/images/home/logo-historiek/historiek_logo_4.png" />
           </div>
           <div class="origin-photo">
-            <img
-              src="../../../assets/images/home/logo-historiek/historiek_logo_5.png"
-            />
+            <img src="../../../assets/images/home/logo-historiek/historiek_logo_5.png" />
           </div>
         </div>
       </div>
@@ -109,11 +93,9 @@
       <div class="image-text">
         <h2>STRONG TEAM</h2>
         <p>
-          The NCSP team is a great mix of seasoned experience and young
-          enthusiasm, of proven solutions and new technologies. We offer global
-          services, in Belgium, in Europe and outside, with a special knack for
-          Africa, where we have a longtime experience, and where we know we can
-          make a difference.
+          he NCSP team is a great mix of seasoned experience and young enthusiasm, of proven solutions and new
+          technologies. We offer global services, in Belgium, Europe, Asia and outside, with a special knack for Africa,
+          where we have a longtime experience, and where we know we can make a difference.
         </p>
       </div>
     </div>
@@ -128,11 +110,9 @@
           LAMBRECHTS GROUP AS A STRONG PARTNER
         </h2>
         <p>
-          NEW CROWN is proud to have a strategic partnership with LAMBRECHTS
-          GROUP, who has a long and successful track record as an equipment
-          manufacturer of kegging lines and industrial washing installations in
-          the brewery industry. The many synergies between NEW CROWN and
-          Lambrechts Group strengthens their positions on the market.
+          NEW CROWN is proud to have a strategic partnership with LAMBRECHTS GROUP, who has a long and successful track
+          record as an equipment manufacturer of kegging lines and industrial washing installations in the brewery
+          industry. The many synergies between NEW CROWN and Lambrechts Group strengthens their positions on the market.
         </p>
       </div>
     </div>
