--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -51,7 +51,7 @@
   <div #whoWeAre class="article">
     <div class="content">
       <div class="image-text">
-        <h2>The origins of the crown</h2>
+        <h2>OUR ORIGINS</h2>
         <p>
           NEW CROWN Service Partners NV was founded in October 2017 by two former employees and acquired the
           intellectual property and trade fund of CROWN-BAELE. This makes NEW CROWN the sole official original
@@ -83,7 +83,7 @@
     </div>
   </div>
 
-  <div #ourApproach class="article image-banner">
+  <div class="article image-banner">
     <img src="../../../assets/images/home/home_pic_3.jpg" />
   </div>
 
@@ -101,6 +101,13 @@
     </div>
   </div>
 
+  <div class="image-banner">
+    <img src="../../../assets/images/home/home_pic_6.jpg" />
+  </div>
+
+  <div class="article image-text">
+  </div>
+
   <div class="article image-text">
     <div class="content">
       <img src="../../../assets/images/home/home_pic_5.png" />
@@ -110,9 +117,11 @@
           LAMBRECHTS GROUP AS A STRONG PARTNER
         </h2>
         <p>
-          NEW CROWN is proud to have a strategic partnership with LAMBRECHTS GROUP, who has a long and successful track
+          NEW CROWN is proud to have a strategic partnership with LAMBRECHTS GROUP, who has a long and successful
+          track
           record as an equipment manufacturer of kegging lines and industrial washing installations in the brewery
-          industry. The many synergies between NEW CROWN and Lambrechts Group strengthens their positions on the market.
+          industry. The many synergies between NEW CROWN and Lambrechts Group strengthens their positions on the
+          market.
         </p>
       </div>
     </div>
