--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,143 +1,154 @@
 @import "../../../assets/variables";
 
 .footer {
-  font-size: 12px;
-  background-color: $footer-color;
-  flex-direction: column !important;
+    font-size: 12px;
+    background-color: $footer-color;
+    flex-direction: column !important;
 
-  @media screen and (max-width: 768px) {
-    .logo {
-      display: flex;
-      justify-content: center;
-    }
-  }
-
-  .copyright {
-    background-color: #c7c8cb;
-    text-align: center;
-    font-size: 16px;
-    padding: 10px;
-  }
-
-  .footer-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex: 1;
-    width: 100%;
-
-    .icons {
-      flex: unset;
-      display: flex;
-      flex-direction: row;
-      fa-icon {
-        font-size: 40px;
-        &:hover {
-          color: $main-color;
+    @media screen and (max-width: 768px) {
+        .logo {
+            display: flex;
+            justify-content: center;
         }
-      }
+    }
+
+    .copyright {
+        background-color: #c7c8cb;
+        text-align: center;
+        font-size: 16px;
+        padding: 10px;
+    }
+
+    .footer-link {
+        color: unset
+    }
+
+    .footer-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        flex: 1;
+        width: 100%;
+
+        .icons {
+            flex: unset;
+            display: flex;
+            flex-direction: row;
+
+            fa-icon {
+                font-size: 40px;
+
+                &:hover {
+                    color: $main-color;
+                }
+            }
+        }
+
+        @media screen and (min-width: 768px) {
+            padding: 20px;
+            padding-left: 0;
+
+            h2 {
+                margin-top: 0;
+                margin-bottom: 10px;
+                color: $main-color;
+            }
+
+            ul {
+                list-style-type: none;
+                padding-inline-start: 0;
+                margin-block-start: 0;
+                margin-block-end: 0;
+
+                li {
+                    margin-bottom: 3px;
+
+                    a {
+                        text-decoration: none;
+                        color: black;
+                        font-size: 16px;
+
+                        &:hover {
+                            color: $main-color;
+                            text-decoration: underline;
+                            text-decoration-color: $main-color;
+                        }
+                    }
+                }
+            }
+
+            div {
+                flex: 1;
+                display: flex;
+                flex-direction: column;
+            }
+        }
+
+        @media screen and (max-width: 768px) {
+            flex-direction: column;
+        }
+
+        .mobile-footer-text {
+            margin-bottom: 5px;
+            font-size: 12px;
+            text-align: center;
+        }
+    }
+
+
+    table {
+        border-spacing: 0;
+
+        tr {
+            td {
+                padding: 2.5px;
+                font-size: 16px;
+            }
+        }
     }
 
     @media screen and (min-width: 768px) {
-      padding: 20px;
-      padding-left: 0;
-      h2 {
-        margin-top: 0;
-        margin-bottom: 10px;
-        color: $main-color;
-      }
+        justify-content: center;
+        flex-direction: row;
+        align-items: center;
+    }
 
-      ul {
-        list-style-type: none;
-        padding-inline-start: 0;
-        margin-block-start: 0;
-        margin-block-end: 0;
-        li {
-          margin-bottom: 3px;
-          a {
-            text-decoration: none;
-            color: black;
-            font-size: 16px;
-            &:hover {
-              color: $main-color;
-              text-decoration: underline;
-              text-decoration-color: $main-color;
-            }
-          }
+    img {
+        height: 50px;
+        width: 50px;
+
+        @media screen and (max-width: 768px) {
+            margin: 5px 0;
+            height: 50px;
+            width: 50px;
         }
-      }
+    }
 
-      div {
-        flex: 1;
-        display: flex;
+    .footer-info {
         flex-direction: column;
-      }
+        display: inline-flex;
+        justify-content: center;
+        font-size: 0.7em;
     }
 
-    @media screen and (max-width: 768px) {
-      flex-direction: column;
+    @media (min-width: 768px) {
+        justify-content: space-between !important;
+
+        img {
+            height: 150px;
+            width: 150px;
+        }
+
+        .footer-info {
+            flex-direction: column;
+            display: inline-flex;
+            justify-content: center;
+            font-size: 15px;
+        }
     }
 
-    .mobile-footer-text {
-      margin-bottom: 5px;
-      font-size: 12px;
-      text-align: center;
+    ul {
+        padding: 0;
+        margin: 0;
     }
-  }
-
-
-  table {
-    border-spacing: 0;
-    tr {
-      td {
-        padding: 2.5px;
-        font-size: 16px;
-      }
-    }
-  }
-
-  @media screen and (min-width: 768px) {
-    justify-content: center;
-    flex-direction: row;
-    align-items: center;
-  }
-
-  img{
-    height: 50px;
-    width: 50px;
-
-    @media screen and (max-width: 768px) {
-      margin: 5px 0;
-      height: 50px;
-      width: 50px;
-    }
-  }
-
-  .footer-info{
-    flex-direction: column;
-    display: inline-flex;
-    justify-content: center;
-    font-size: 0.7em;
-  }
-
-  @media (min-width: 768px) {
-    justify-content: space-between !important;
-
-    img{
-      height: 150px;
-      width: 150px;
-    }
-
-    .footer-info{
-      flex-direction: column;
-      display: inline-flex;
-      justify-content: center;
-      font-size: 15px;
-    }
-  }
-
-  ul {
-    padding: 0;
-    margin: 0;
-  }
 }
