--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,6 +36,9 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-
 }
 
 
+* {
+    -webkit-overflow-scrolling: touch;
+}
 
 body,
 html {
